--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,52 @@
 .App {
   text-align: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  
 }
 
-.App-logo {
+.block{
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+
+}
+
+body{
+  background-color: #282c34;
+}
+
+.cell {
+  border: 1px solid black;
+  display: inline-block;
+  padding: 25px;
+  
+}
+
+
+
+.row {
+  border: 1px solid white;
+  display: inline-block;
+  padding: 25px;
+  
+}
+
+.grid {
+  border: 1px solid black;
+  /* display: inline-block; */
+  padding: 25px;
+  background-color: white;
+  font-size: small;
+
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +79,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
