--- a/src/App.css
+++ b/src/App.css
@@ -21,30 +21,6 @@ body{
   background-color: #282c34;
 }
 
-.cell {
-  border: 1px solid black;
-  display: inline-block;
-  padding: 25px;
-  
-}
-
-
-
-.row {
-  border: 1px solid white;
-  display: inline-block;
-  padding: 25px;
-  
-}
-
-.grid {
-  border: 1px solid black;
-  /* display: inline-block; */
-  padding: 25px;
-  background-color: white;
-  font-size: small;
-
-}
 
 /* .App-logo {
   height: 40vmin;
@@ -80,3 +56,33 @@ body{
     transform: rotate(360deg);
   }
 } */
+
+.board {
+  background-image: linear-gradient(#3ca3ff, #005eb3);
+  width: 800px;
+  margin: auto;
+  padding: 8px;
+}
+
+/* .board > .cell { */
+.cell {
+  width: calc(800px / 7 - 8px);
+  height: calc(800px / 7 - 8px);
+  background: white;
+  display: inline-block;
+  box-sizing: border-box;
+  border-radius: 50%;
+  margin: 4px;
+  cursor: pointer;
+  text-indent: -9999px;
+}
+
+.cell.p1{
+  background-color: black;
+  color: white;
+}
+
+.cell.p2{
+  background-color: red;
+  color: black;
+}
