--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
 
 .block{
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 5%;
 
 }
 
@@ -21,41 +21,6 @@ body{
   background-color: #282c34;
 }
 
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 h1 {
   text-align: center;
@@ -68,8 +33,8 @@ table {
 }
 
 .button {
-  background-color: #303030;
-  color: #50C8FF;
+  background-color: darkblue;
+  color: white;
   height: 30px;
   width: 100px;
   border-radius: 5px;
@@ -81,13 +46,13 @@ table {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  /* transition: background-color 0.5s, color 0.5s; */
+
 }
 
 .button:hover {
-  background-color: #50C8FF;
-  color: #303030;
-  /* transition: background-color 0.5s, color 0.5s; */
+  background-color: skyblue;
+  color: white;
+
 }
 
 .cell {
@@ -101,24 +66,11 @@ table {
   cursor: pointer;
 }
 
-/* .circle {
-  height: 15px;
-  width: 15px;
-  border: 1px solid #000;
-  border-radius: 100px;
-} */
 
-/* .circles {
-  margin: -40px 0 25px 0;
-  display: flex;
-  justify-content: center;
-} */
-
-
-.message {
+/* .message {
   text-align: center;
   font-size: 17px;
-}
+} */
 
 .white {
   height: 60px;
@@ -132,7 +84,6 @@ table {
   width: 60px;
   background-color: red;
   border-radius: 100px;
-  /* transition: background-color 0.5s; */
 }
 
 .black {
@@ -140,5 +91,25 @@ table {
   width: 60px;
   background-color: black;
   border-radius: 100px;
-  /* transition: background-color 0.5s; */
+}
+
+.routes{
+  color: skyblue;
+  font-size:150%;
+  text-align: center;
+}
+
+a{
+  color: red;
+}
+
+input[type=text], select {
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: large;
 }
